<resources>

    <string name="app_name">Shakunaku</string>
    <string name="shakunaku">ShakuNaku</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full Name</string>
    <string name="email_address_or_phone_number">Email or Phone </string>
    <string name="by_signing_up_you_agree_to_our_terms">By signing up, you agree to our Terms</string>
    <string name="privacy_policy"><![CDATA[& Privacy Policy.]]></string>

    <array name="tab_name">
        <item>Home</item>
        <item>Notifications</item>
        <item>Media</item>
        <item>DM</item>
        <item>Profile</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="social">Social</string>
    <string name="media">Media</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="post">Post</string>
    <string name="posts">Posts</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="about_shakunaku">About Shakunaku</string>
    <string name="log_out">Log Out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="account">Account</string>
    <string name="chats">Chats</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="help">Help</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registering_new_user">Registering new user. Please verify your email</string>
    <string name="please_fill_all_the_fields">Please fill all the fields</string>
    <string name="please_set_the_password">Please set the password</string>
    <string name="provide_your_email">Please provide your email</string>
    <string name="confirm_your_password">Please confirm your password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="provide_your_password">Please provide your password</string>

    <!-- Firebase Database -->
    <string name="dbname_users">users</string>
    <string name="dbname_user_account_settings">user_account_settings</string>
    <string name="username">username</string>
    <string name="confirmDialogPassword">ConfirmPasswordDialog</string>
    <string name="email">email</string>

    <string name="fullname">fullname</string>
    <string name="display_name">display_name</string>
    <string name="website">website</string>
    <string name="bio">bio</string>
    <string name="phone_number">phone_number</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="shared_image">Shared Image</string>
    <string name="add_a_caption">Add a caption</string>
    <string name="dbname_user_photos">user_photos</string>

    <!--  Photo Type -->
    <string name="new_photo">new_photo</string>
    <string name="profile_photo">profile_photo</string>

    <!-- firebase tables -->
    <string name="dbname_photos">photos</string>
    <string name="shared_bitmap">shared_bitmap</string>
    <string name="dbname_following">Following</string>
    <string name="dbname_followers">Followers</string>

    <!-- database fields -->
    <string name="user_id">user_id</string>
    <string name="field_likes">Likes</string>
    <string name="field_comments">Comments</string>
    <string name="field_photo_caption">photo_caption</string>
    <string name="field_date_created">date_created</string>
    <string name="field_image_path">image_path</string>
    <string name="field_photo_id">photo_id</string>

    <!-- Extra string -->
    <string name="post_info">postInfo</string>
    <string name="comments">Comments</string>
    <string name="pass_to_comments">passToComments</string>
    <string name="main_search">Search ...</string>
    <string name="search_fragment">SearchFragment</string>
    <string name="direct_message">Direct Message</string>
    <string name="mute">Mute</string>
    <string name="report">Report</string>
    <string name="calling_activity">Calling Activity</string>
    <string name="parcelable_user">user</string>

    <!-- Activity names -->
    <string name="search_activity">SearchActivity</string>

    <!-- Fragment names -->
    <string name="view_profile_fragment">ViewProfileFragment</string>
    <string name="profile_fragment">ProfileFragment</string>
    <string name="new_contents">New</string>
    <string name="hot_contents">Hot</string>
</resources>
