<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".Activities.RegistrationActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/actionBarSize"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign up"
            android:textColor="@android:color/white"
            android:layout_marginLeft="50dp"
            android:textSize="16dp"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:paddingTop="66dp"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_outline"
            android:hint="@string/full_name"
            android:textColorHint="@android:color/darker_gray"
            android:backgroundTint="@null"
            android:inputType="text"
            android:paddingLeft="16dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:singleLine="true"
            android:ellipsize="start"/>


        <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/email_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_outline"
            android:hint="@string/email_address_or_phone_number"
            android:inputType="textEmailAddress"
            android:textColorHint="@android:color/darker_gray"
            android:backgroundTint="@null"
            android:paddingLeft="16dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:singleLine="true"
            android:ellipsize="start"/>

        <!--
        <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borders"
            android:hint="@string/username"
            android:inputType="text"
            android:textColorHint="@android:color/darker_gray"
            android:backgroundTint="@null"
            android:paddingLeft="16dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:singleLine="true"
            android:ellipsize="start"/>
            -->

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_outline"
            android:hint="@string/password"
            android:textColorHint="@android:color/darker_gray"
            android:backgroundTint="@null"
            android:inputType="textPassword"
            android:paddingLeft="16dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:ellipsize="start"
            android:singleLine="true" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_outline"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingLeft="16dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:ellipsize="start"
            android:singleLine="true" />

        <Button
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorPrimary"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textAllCaps="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/by_signing_up_you_agree_to_our_terms"/>

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:gravity="end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Have Account?"
            android:layout_weight="1"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="30dp"/>

        <View
            android:layout_gravity="center"
            android:layout_width="1.5dp"
            android:layout_height="15dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/sign_in"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="15sp"
            android:layout_marginLeft="4dp"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>

</LinearLayout>