<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.0"
        android:background="@drawable/curved_shaped">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@mipmap/smiley_tongue"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="45dp"/>
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.7">

        <EditText
            android:id="@+id/username"
            android:layout_marginRight="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:backgroundTint="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:fontFamily="sans-serif"/>

        <EditText
            android:id="@+id/password"
            android:layout_marginRight="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:backgroundTint="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:inputType="textPassword"
            android:fontFamily="sans-serif"/>

        <Button
            android:id="@+id/sign_in"
            android:layout_marginRight="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"/>

        <TextView
            android:layout_marginRight="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"/>

        <Button
            android:layout_marginRight="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorBlue"
            android:text="@string/sign_in_with_facebook"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"/>

        <LinearLayout
            android:layout_marginRight="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="60dp">

            <TextView
                android:gravity="end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Need Account?"
                android:layout_weight="1"
                android:layout_marginRight="4dp"/>

            <View
                android:layout_width="1.5dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/sign_up"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="15sp"
                android:layout_marginLeft="4dp"
                android:textColor="@color/colorPrimaryDark"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>