<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Timeline_Posting.PostingMediaFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/actionBarSize"
        android:background="@android:color/black">

        <TextView
            android:layout_gravity="center"
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post"
            android:textColor="@android:color/white"
            android:textSize="16dp"/>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_marginTop="8dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="66dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/post_background">

        <RelativeLayout
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/camera_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

            <TextView
                android:layout_marginTop="16dp"
                android:id="@+id/gallery_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_below="@id/camera_text"/>

            <TextView
                android:layout_marginTop="16dp"
                android:id="@+id/voice_audio_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Voice/Audio"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_below="@id/gallery_text"/>
        </RelativeLayout>

    </RelativeLayout>


</RelativeLayout>